# black-hole

./: Cargo.toml  README.md  rustc-ice-2026-06-30T04_21_13-32140.txt
assets/: trace-compute.wgsl  trace.wgsl
src/: app.rs  main.rs
src/components/: mod.rs  rt.rs
src/render/: mod.rs  node.rs  pipeline.rs  resources.rs  tracer.rs  tracer_material.rs
