[package]
name = "black-hole"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.18.0", features = ["bevy_image", "file_watcher"]}
bevy-inspector-egui = "0.36.0"


[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
needless_return = "allow"
